--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-icons": "^4.9.0",
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.12.1",
-    "react-share": "^4.4.1"
+    "react-share": "^4.4.1",
+    "sweet-alert": "^2.0.5",
+    "sweetalert2": "^11.7.12",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
