--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.14.0",
+    "@mui/x-data-grid": "^6.10.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "dotenv": "^16.1.4",
+    "formik": "^2.4.2",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.9.0",
+    "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.12.1",
     "react-share": "^4.4.1",
     "sweet-alert": "^2.0.5",
