--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.0",
     "dotenv": "^16.1.4",
     "formik": "^2.4.2",
+    "jwt-decode": "^3.1.2",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
